# networks-by-optimization

./: README.md  networks-by-optimization.cabal
src/: ComputationalGraph.hs  ComutationalGraph.hs  Main.hs  NEMSolver.hs  Optimizer.hs  Sandbox.hs
src/ComputationalGraph/: VectorLayers.hs
test/: Main.hs
