name: networks-by-optimization
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
synopsis: Learning networks by optimization

executable networks-by-optimization
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        ComputationalGraph.VectorLayers
        ComutationalGraph
        NEMSolver
        Optimizer
    ghc-options: -ferror-spans

test-suite test-networks-by-optimization
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
